--- a/applications/dashboard/styleguide/section-14.html
+++ b/applications/dashboard/styleguide/section-14.html
@@ -13,7 +13,7 @@
   <script src="public/global-stub.js"></script>
   <script src="public/dashboard.js"></script>
   <script>
-    $(document).on('click', '.main .content a', function(e) {
+    $(document).on('click', '.kss-example a', function(e) {
       e.preventDefault();
     });
   </script>
@@ -81,8 +81,9 @@
         <div class="panel-content-wrapper">
           <div id="fixed-help" class="js-fluid-fixed panel-content">
             <ul class="nav nav-pills" data-spy="affix">
-                <li><a href="#14-1" class="nav-link">Dropdown Menu alignment</a></li>
-                <li><a href="#14-2" class="nav-link">Dropup Variation</a></li>
+                <li><a href="#14-1" class="nav-link">Dropdown Menu</a></li>
+                <li><a href="#14-2" class="nav-link">Dropdown Menu Right-aligned</a></li>
+                <li><a href="#14-3" class="nav-link">Dropup Variation</a></li>
             </ul>
           </div>
         </div>
@@ -99,10 +100,9 @@
                   <div class="kss-component">
                     <div class="kss-component-description row full-border">
                       <h2 class="kss-title" id="14-1">
-                      <span class="kss-ref badge pull-right">14-1</span> Dropdown Menu alignment
+                      <span class="kss-ref badge pull-right">14-1</span> Dropdown Menu
                       </h2>
-                        <div class="kss-box padded"><p>PHP rendering: If you want the dropdown menu to open right, set the Dropdown Module&#39;s <code>listCssClass</code> to
-<code>dropdown-menu-right</code>.</p>
+                        <div class="kss-box padded"><p>Here&#39;s the default dropdown menu markup.</p>
 </div>
                         <pre class="prettyprint lang-html padded-bottom" style="background-color: #fff">&lt;div class=&quot;dropdown&quot;&gt;
   &lt;div class=&quot;dropdown-toggle btn btn-icon-border&quot; data-toggle=&quot;dropdown&quot; aria-haspopup=&quot;true&quot; aria-expanded=&quot;false&quot;&gt;
@@ -110,7 +110,7 @@
       &lt;use xlink:href=&quot;#code-bubble&quot;&gt;&lt;/use&gt;
     &lt;/svg&gt;
   &lt;/div&gt;
-  &lt;div class=&quot;dropdown-menu [modifier class]&quot;&gt;
+  &lt;div class=&quot;dropdown-menu &quot;&gt;
     &lt;a role=&quot;menuitem&quot; class=&quot;dropdown-item&quot; tabindex=&quot;-1&quot; href=&quot;#&quot;&gt;Option&lt;/a&gt;
     &lt;a role=&quot;menuitem&quot; class=&quot;dropdown-item disabled&quot; tabindex=&quot;-1&quot; href=&quot;#&quot;&gt;Disabled Option&lt;/a&gt;
     &lt;div class=&quot;dropdown-divider&quot;&gt;&lt;/div&gt;
@@ -131,7 +131,7 @@
       <use xlink:href="#code-bubble"></use>
     </svg>
   </div>
-  <div class="dropdown-menu [modifier class]">
+  <div class="dropdown-menu ">
     <a role="menuitem" class="dropdown-item" tabindex="-1" href="#">Option</a>
     <a role="menuitem" class="dropdown-item disabled" tabindex="-1" href="#">Disabled Option</a>
     <div class="dropdown-divider"></div>
@@ -144,9 +144,41 @@
     </a>
   </div>
 </div></div>
-                          <div class="kss-example-heading-wrap padded-top"><span class="italic kss-example-heading">Opens with the right side of the dropdown menu aligned the right of the root dropdown div.</span> <span class="pull-right"><code>.dropdown-menu-right</code></span></div>
-                          <div class="kss-example padded-bottom"><div class="dropdown">
-  <div class="dropdown-toggle btn btn-icon-border" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  </div>
+                </section>
+                <section class="kss-depth-2">
+                  <div class="kss-component">
+                    <div class="kss-component-description row full-border">
+                      <h2 class="kss-title" id="14-2">
+                      <span class="kss-ref badge pull-right">14-2</span> Dropdown Menu Right-aligned
+                      </h2>
+                        <div class="kss-box padded"><p>Opens with the right side of the dropdown menu aligned the right of the root dropdown div.</p>
+<p>PHP rendering: If you want the dropdown menu to open right, set the Dropdown Module&#39;s <code>listCssClass</code> to
+<code>dropdown-menu-right</code>.</p>
+</div>
+                        <pre class="prettyprint lang-html padded-bottom" style="background-color: #fff">&lt;div class=&quot;dropdown clearfix&quot;&gt;
+  &lt;div class=&quot;dropdown-toggle pull-right btn btn-icon-border&quot; data-toggle=&quot;dropdown&quot; aria-haspopup=&quot;true&quot; aria-expanded=&quot;false&quot;&gt;
+    &lt;svg class=&quot;icon icon-16&quot; viewBox=&quot;0 0 16 16&quot;&gt;
+      &lt;use xlink:href=&quot;#code-bubble&quot;&gt;&lt;/use&gt;
+    &lt;/svg&gt;
+  &lt;/div&gt;
+  &lt;div class=&quot;dropdown-menu dropdown-menu-right&quot;&gt;
+    &lt;a role=&quot;menuitem&quot; class=&quot;dropdown-item&quot; tabindex=&quot;-1&quot; href=&quot;#&quot;&gt;Option&lt;/a&gt;
+    &lt;a role=&quot;menuitem&quot; class=&quot;dropdown-item disabled&quot; tabindex=&quot;-1&quot; href=&quot;#&quot;&gt;Disabled Option&lt;/a&gt;
+    &lt;div class=&quot;dropdown-divider&quot;&gt;&lt;/div&gt;
+    &lt;div class=&quot;dropdown-header&quot;&gt;Display as&lt;/div&gt;
+    &lt;a role=&quot;menuitem&quot; class=&quot;dropdown-item&quot; tabindex=&quot;-1&quot; href=&quot;#&quot;&gt;
+      &lt;svg class=&quot;icon icon-16 icon-discussions&quot; viewBox=&quot;0 0 16 16&quot;&gt;
+        &lt;use xlink:href=&quot;#question-mark&quot;&gt;&lt;/use&gt;
+      &lt;/svg&gt;
+      Help
+    &lt;/a&gt;
+  &lt;/div&gt;
+&lt;/div&gt;</pre>
+                        </div> <!-- end kss-component-description -->
+                        <div class="kss-example-heading-wrap padded-top"><span class="italic kss-example-heading">Default styling</span></div>
+                        <div class="kss-example padded-bottom"><div class="dropdown clearfix">
+  <div class="dropdown-toggle pull-right btn btn-icon-border" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
     <svg class="icon icon-16" viewBox="0 0 16 16">
       <use xlink:href="#code-bubble"></use>
     </svg>
@@ -169,8 +201,8 @@
                 <section class="kss-depth-2">
                   <div class="kss-component">
                     <div class="kss-component-description row full-border">
-                      <h2 class="kss-title" id="14-2">
-                      <span class="kss-ref badge pull-right">14-2</span> Dropup Variation
+                      <h2 class="kss-title" id="14-3">
+                      <span class="kss-ref badge pull-right">14-3</span> Dropup Variation
                       </h2>
                         <div class="kss-box padded"><p>PHP rendering: If you want the dropdown menu to open up, set the Dropdown Module&#39;s <code>cssClass</code> property to <code>dropup</code>.</p>
 </div>
