--- a/applications/dashboard/styleguide/section-4.html
+++ b/applications/dashboard/styleguide/section-4.html
@@ -13,7 +13,7 @@
   <script src="public/global-stub.js"></script>
   <script src="public/dashboard.js"></script>
   <script>
-    $(document).on('click', '.main .content a', function(e) {
+    $(document).on('click', '.kss-example a', function(e) {
       e.preventDefault();
     });
   </script>
