--- a/applications/dashboard/styleguide/section-11.html
+++ b/applications/dashboard/styleguide/section-11.html
@@ -81,184 +81,49 @@
         <div class="panel-content-wrapper">
           <div id="fixed-help" class="js-fluid-fixed panel-content">
             <ul class="nav nav-pills" data-spy="affix">
-                <li><a href="#14-1" class="nav-link">Dropdown Menu</a></li>
-                <li><a href="#14-2" class="nav-link">Dropdown Menu Right-aligned</a></li>
-                <li><a href="#14-3" class="nav-link">Dropup Variation</a></li>
+                <li><a href="#11-1" class="nav-link">Alerts</a></li>
             </ul>
           </div>
         </div>
       </div>
       <div class="main">
         <div class="content">
-                <h1 class="kss-title" id="14">Dropdowns</h1>
+                <h1 class="kss-title" id="11">Alerts</h1>
                   <div class="kss-box">
-                    <div class="padded"><p>The dropdown uses twbs&#39;s scss.</p>
-<p>PHP rendering: Use the <code>dropdown-twbs</code> view using the Dropdown Module.</p>
+                    <div class="padded"><p>Alerts are warning/info/danger/success messages that generally appear at the top of a page. Alerts use twbs&#39;s scss.</p>
 </div>
                   </div>
                 <section class="kss-depth-2">
                   <div class="kss-component">
                     <div class="kss-component-description row full-border">
-                      <h2 class="kss-title" id="14-1">
-                      <span class="kss-ref badge pull-right">14-1</span> Dropdown Menu
+                      <h2 class="kss-title" id="11-1">
+                      <span class="kss-ref badge pull-right">11-1</span> Alerts
                       </h2>
-                        <div class="kss-box padded"><p>Here&#39;s the default dropdown menu markup.</p>
+                        <div class="kss-box padded"><p>Alerts come in four different flavours.</p>
 </div>
-                        <pre class="prettyprint lang-html padded-bottom" style="background-color: #fff">&lt;div class=&quot;dropdown&quot;&gt;
-  &lt;div class=&quot;dropdown-toggle btn btn-icon-border&quot; data-toggle=&quot;dropdown&quot; aria-haspopup=&quot;true&quot; aria-expanded=&quot;false&quot;&gt;
-    &lt;svg class=&quot;icon icon-16&quot; viewBox=&quot;0 0 16 16&quot;&gt;
-      &lt;use xlink:href=&quot;#code-bubble&quot;&gt;&lt;/use&gt;
-    &lt;/svg&gt;
-  &lt;/div&gt;
-  &lt;div class=&quot;dropdown-menu &quot;&gt;
-    &lt;a role=&quot;menuitem&quot; class=&quot;dropdown-item&quot; tabindex=&quot;-1&quot; href=&quot;#&quot;&gt;Option&lt;/a&gt;
-    &lt;a role=&quot;menuitem&quot; class=&quot;dropdown-item disabled&quot; tabindex=&quot;-1&quot; href=&quot;#&quot;&gt;Disabled Option&lt;/a&gt;
-    &lt;div class=&quot;dropdown-divider&quot;&gt;&lt;/div&gt;
-    &lt;div class=&quot;dropdown-header&quot;&gt;Display as&lt;/div&gt;
-    &lt;a role=&quot;menuitem&quot; class=&quot;dropdown-item&quot; tabindex=&quot;-1&quot; href=&quot;#&quot;&gt;
-      &lt;svg class=&quot;icon icon-16 icon-discussions&quot; viewBox=&quot;0 0 16 16&quot;&gt;
-        &lt;use xlink:href=&quot;#question-mark&quot;&gt;&lt;/use&gt;
-      &lt;/svg&gt;
-      Help
-    &lt;/a&gt;
-  &lt;/div&gt;
+                        <pre class="prettyprint lang-html padded-bottom" style="background-color: #fff">&lt;div class=&quot;alert [modifier class] padded&quot;&gt;
+  This is an alert message. Take note ye all.
 &lt;/div&gt;</pre>
                         </div> <!-- end kss-component-description -->
                         <div class="kss-example-heading-wrap padded-top"><span class="italic kss-example-heading">Default styling</span></div>
-                        <div class="kss-example padded-bottom"><div class="dropdown">
-  <div class="dropdown-toggle btn btn-icon-border" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    <svg class="icon icon-16" viewBox="0 0 16 16">
-      <use xlink:href="#code-bubble"></use>
-    </svg>
-  </div>
-  <div class="dropdown-menu ">
-    <a role="menuitem" class="dropdown-item" tabindex="-1" href="#">Option</a>
-    <a role="menuitem" class="dropdown-item disabled" tabindex="-1" href="#">Disabled Option</a>
-    <div class="dropdown-divider"></div>
-    <div class="dropdown-header">Display as</div>
-    <a role="menuitem" class="dropdown-item" tabindex="-1" href="#">
-      <svg class="icon icon-16 icon-discussions" viewBox="0 0 16 16">
-        <use xlink:href="#question-mark"></use>
-      </svg>
-      Help
-    </a>
-  </div>
+                        <div class="kss-example padded-bottom"><div class="alert [modifier class] padded">
+  This is an alert message. Take note ye all.
 </div></div>
-                  </div>
-                </section>
-                <section class="kss-depth-2">
-                  <div class="kss-component">
-                    <div class="kss-component-description row full-border">
-                      <h2 class="kss-title" id="14-2">
-                      <span class="kss-ref badge pull-right">14-2</span> Dropdown Menu Right-aligned
-                      </h2>
-                        <div class="kss-box padded"><p>Opens with the right side of the dropdown menu aligned the right of the root dropdown div.</p>
-<p>PHP rendering: If you want the dropdown menu to open right, set the Dropdown Module&#39;s <code>listCssClass</code> to
-<code>dropdown-menu-right</code>.</p>
-</div>
-                        <pre class="prettyprint lang-html padded-bottom" style="background-color: #fff">&lt;div class=&quot;dropdown clearfix&quot;&gt;
-  &lt;div class=&quot;dropdown-toggle pull-right btn btn-icon-border&quot; data-toggle=&quot;dropdown&quot; aria-haspopup=&quot;true&quot; aria-expanded=&quot;false&quot;&gt;
-    &lt;svg class=&quot;icon icon-16&quot; viewBox=&quot;0 0 16 16&quot;&gt;
-      &lt;use xlink:href=&quot;#code-bubble&quot;&gt;&lt;/use&gt;
-    &lt;/svg&gt;
-  &lt;/div&gt;
-  &lt;div class=&quot;dropdown-menu dropdown-menu-right&quot;&gt;
-    &lt;a role=&quot;menuitem&quot; class=&quot;dropdown-item&quot; tabindex=&quot;-1&quot; href=&quot;#&quot;&gt;Option&lt;/a&gt;
-    &lt;a role=&quot;menuitem&quot; class=&quot;dropdown-item disabled&quot; tabindex=&quot;-1&quot; href=&quot;#&quot;&gt;Disabled Option&lt;/a&gt;
-    &lt;div class=&quot;dropdown-divider&quot;&gt;&lt;/div&gt;
-    &lt;div class=&quot;dropdown-header&quot;&gt;Display as&lt;/div&gt;
-    &lt;a role=&quot;menuitem&quot; class=&quot;dropdown-item&quot; tabindex=&quot;-1&quot; href=&quot;#&quot;&gt;
-      &lt;svg class=&quot;icon icon-16 icon-discussions&quot; viewBox=&quot;0 0 16 16&quot;&gt;
-        &lt;use xlink:href=&quot;#question-mark&quot;&gt;&lt;/use&gt;
-      &lt;/svg&gt;
-      Help
-    &lt;/a&gt;
-  &lt;/div&gt;
-&lt;/div&gt;</pre>
-                        </div> <!-- end kss-component-description -->
-                        <div class="kss-example-heading-wrap padded-top"><span class="italic kss-example-heading">Default styling</span></div>
-                        <div class="kss-example padded-bottom"><div class="dropdown clearfix">
-  <div class="dropdown-toggle pull-right btn btn-icon-border" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    <svg class="icon icon-16" viewBox="0 0 16 16">
-      <use xlink:href="#code-bubble"></use>
-    </svg>
-  </div>
-  <div class="dropdown-menu dropdown-menu-right">
-    <a role="menuitem" class="dropdown-item" tabindex="-1" href="#">Option</a>
-    <a role="menuitem" class="dropdown-item disabled" tabindex="-1" href="#">Disabled Option</a>
-    <div class="dropdown-divider"></div>
-    <div class="dropdown-header">Display as</div>
-    <a role="menuitem" class="dropdown-item" tabindex="-1" href="#">
-      <svg class="icon icon-16 icon-discussions" viewBox="0 0 16 16">
-        <use xlink:href="#question-mark"></use>
-      </svg>
-      Help
-    </a>
-  </div>
+                          <div class="kss-example-heading-wrap padded-top"><span class="italic kss-example-heading">Inform the user about something. It&#39;s not going to break anything if they don&#39;t see this, but it&#39;s good to know.</span> <span class="pull-right"><code>.alert-info</code></span></div>
+                          <div class="kss-example padded-bottom"><div class="alert alert-info padded">
+  This is an alert message. Take note ye all.
 </div></div>
-                  </div>
-                </section>
-                <section class="kss-depth-2">
-                  <div class="kss-component">
-                    <div class="kss-component-description row full-border">
-                      <h2 class="kss-title" id="14-3">
-                      <span class="kss-ref badge pull-right">14-3</span> Dropup Variation
-                      </h2>
-                        <div class="kss-box padded"><p>PHP rendering: If you want the dropdown menu to open up, set the Dropdown Module&#39;s <code>cssClass</code> property to <code>dropup</code>.</p>
-</div>
-                        <pre class="prettyprint lang-html padded-bottom" style="background-color: #fff">&lt;div class=&quot;dropdown [modifier class]&quot;&gt;
-  &lt;div class=&quot;dropdown-toggle btn btn-secondary&quot; data-toggle=&quot;dropdown&quot; aria-haspopup=&quot;true&quot; aria-expanded=&quot;false&quot;&gt;
-    Trigger
-  &lt;/div&gt;
-  &lt;div class=&quot;dropdown-menu&quot;&gt;
-    &lt;a role=&quot;menuitem&quot; class=&quot;dropdown-item&quot; tabindex=&quot;-1&quot; href=&quot;#&quot;&gt;Option&lt;/a&gt;
-    &lt;a role=&quot;menuitem&quot; class=&quot;dropdown-item disabled&quot; tabindex=&quot;-1&quot; href=&quot;#&quot;&gt;Disabled Option&lt;/a&gt;
-    &lt;div class=&quot;dropdown-divider&quot;&gt;&lt;/div&gt;
-    &lt;div class=&quot;dropdown-header&quot;&gt;Display as&lt;/div&gt;
-    &lt;a role=&quot;menuitem&quot; class=&quot;dropdown-item&quot; tabindex=&quot;-1&quot; href=&quot;#&quot;&gt;
-      &lt;svg class=&quot;icon icon-16&quot; viewBox=&quot;0 0 16 16&quot;&gt;
-        &lt;use xlink:href=&quot;#question-mark&quot;&gt;&lt;/use&gt;
-      &lt;/svg&gt;
-      Help
-    &lt;/a&gt;
-  &lt;/div&gt;
-&lt;/div&gt;</pre>
-                        </div> <!-- end kss-component-description -->
-                        <div class="kss-example-heading-wrap padded-top"><span class="italic kss-example-heading">Default styling</span></div>
-                        <div class="kss-example padded-bottom"><div class="dropdown [modifier class]">
-  <div class="dropdown-toggle btn btn-secondary" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    Trigger
-  </div>
-  <div class="dropdown-menu">
-    <a role="menuitem" class="dropdown-item" tabindex="-1" href="#">Option</a>
-    <a role="menuitem" class="dropdown-item disabled" tabindex="-1" href="#">Disabled Option</a>
-    <div class="dropdown-divider"></div>
-    <div class="dropdown-header">Display as</div>
-    <a role="menuitem" class="dropdown-item" tabindex="-1" href="#">
-      <svg class="icon icon-16" viewBox="0 0 16 16">
-        <use xlink:href="#question-mark"></use>
-      </svg>
-      Help
-    </a>
-  </div>
+                          <div class="kss-example-heading-wrap padded-top"><span class="italic kss-example-heading">Warn the user about something. It&#39;s best that they heed this advice if they want everything to run smoothly.</span> <span class="pull-right"><code>.alert-warning</code></span></div>
+                          <div class="kss-example padded-bottom"><div class="alert alert-warning padded">
+  This is an alert message. Take note ye all.
 </div></div>
-                          <div class="kss-example-heading-wrap padded-top"><span class="italic kss-example-heading">Opens up instead of down.</span> <span class="pull-right"><code>.dropup</code></span></div>
-                          <div class="kss-example padded-bottom"><div class="dropdown dropup">
-  <div class="dropdown-toggle btn btn-secondary" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    Trigger
-  </div>
-  <div class="dropdown-menu">
-    <a role="menuitem" class="dropdown-item" tabindex="-1" href="#">Option</a>
-    <a role="menuitem" class="dropdown-item disabled" tabindex="-1" href="#">Disabled Option</a>
-    <div class="dropdown-divider"></div>
-    <div class="dropdown-header">Display as</div>
-    <a role="menuitem" class="dropdown-item" tabindex="-1" href="#">
-      <svg class="icon icon-16" viewBox="0 0 16 16">
-        <use xlink:href="#question-mark"></use>
-      </svg>
-      Help
-    </a>
-  </div>
+                          <div class="kss-example-heading-wrap padded-top"><span class="italic kss-example-heading">Alert the user of a failure or if they&#39;re about to do something that has serious consequences.</span> <span class="pull-right"><code>.alert-danger</code></span></div>
+                          <div class="kss-example padded-bottom"><div class="alert alert-danger padded">
+  This is an alert message. Take note ye all.
+</div></div>
+                          <div class="kss-example-heading-wrap padded-top"><span class="italic kss-example-heading">Let the user know that what they&#39;ve tried to do has been successful.</span> <span class="pull-right"><code>.alert-success</code></span></div>
+                          <div class="kss-example padded-bottom"><div class="alert alert-success padded">
+  This is an alert message. Take note ye all.
 </div></div>
                   </div>
                 </section>
