Drop attribute "type" for style tags
Vanilla uses html5 and in html5 the default type is "text/css". Based on [that information](http://www.w3schools.com/tags/att_style_type.asp), this type is the only supported type anyway. So even if browsers wouldn't be compatible with html5, they would treat a simple `<style>` tag correctly.

--- a/container.html
+++ b/container.html
@@ -126,7 +126,7 @@
             }
         });
     </script>
-    <style type="text/css">
+    <style>
         html, body {
             background-color: transparent;
             overflow: hidden;
